# apidesign-uci-source

./: .gitignore  CMakeLists.txt  README.md
docs/: ALGORITHM_ONBOARDING_CONTRACT.md  MYOQSPROV_SDFR_EXAMPLE.md  api.md
docs/upstream/: 00182023.md  00182023.source.json  00182026.md
examples/provider_skeleton/: myoqsprov_custom_sig_skeleton.c  sdfr_patch.template.conf
include/uci/: core.h  core_dispatch.h  core_names.h  params.h  provider.h  sdf.h  uci.h  uci_evp_autogen.h  uci_hybrid.h  uci_sdf.h  uci_unified.h
scripts/: gen_uci_evp_wrappers.py  onboard_new_alg.sh
src/: uci_evp_autogen.c  uci_hybrid.c  uci_unified.c  uci_wrapper.c
src/evp/: asymcipher.c  bio_b64.c  bio_enc.c  bio_md.c  bio_ok.c  c_allc.c  c_alld.c  cmeth_lib.c  ctrl_params_translate.c  dh_ctrl.c  digest.c  dsa_ctrl.c  e_aes.c  e_aes_cbc_hmac_sha1.c  e_aes_cbc_hmac_sha256.c  e_aria.c  e_bf.c  e_camellia.c  e_cast.c  e_chacha20_poly1305.c  e_des.c  e_des3.c  e_idea.c  e_null.c  e_old.c  e_rc2.c  e_rc4.c  e_rc4_hmac_md5.c  e_rc5.c  e_seed.c  e_sm4.c  e_xcbc_d.c  ec_ctrl.c  encode.c  evp_cnf.c  evp_enc.c  evp_err.c  evp_fetch.c  evp_key.c  evp_lib.c  (+42 more)
src/sdf/: sdf_evp_router.c  sdf_hash_ops.c  sdf_hash_state.h  sdf_key_mgmt_ecc.c  sdf_legacy_asym_keymgmt.c  sdf_store.c  sdf_store.h  sdf_sym_ops.c  sdf_sym_state.h  sdf_unified.c
tests/: README_TESTS.md  test_equiv_matrix.c  test_sdf_epk_unified.c  test_sdf_export_enc_public_unified.c  test_sdf_export_sign_public_unified.c  test_sdf_internal_op_unified.c  test_sdf_ipk_unified.c  test_sdf_isk_unified.c  test_sdf_op_sign_verify_unified.c  test_sdfr_pq.c  test_sdfu_myoqsprov_pq.c  test_sdfu_rsa_ecc.c
